<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewEnd"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDisconnect"
        android:layout_width="250dp"
        android:layout_height="48dp"
        style="?selectableItemBackground"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/strdisconnect"
        android:text="@string/strdisconnect"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButton"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="332dp"
        android:gravity="center"
        android:text="@string/mode"
        android:textOff="@string/auto"
        android:textOn="@string/manual"
        android:textSize="21sp"
        android:textStyle="bold"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showText="true"
        app:track="@drawable/sw_track"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:text="@string/humidity"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/voltage"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="19dp"
        android:text="@string/voltage"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/power"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginBottom="559dp"
        android:text="@string/power"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/current"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:text="@string/current"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:text="@string/temperature"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/showVoltage"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:contentDescription="@string/strparameters"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/showCurrent"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:contentDescription="@string/strparameters"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/showPower"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/strparameters"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/showTemperature"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:contentDescription="@string/strparameters"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/showHumidity"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:contentDescription="@string/strparameters"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/bntDown"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:rotation="180"
        app:backgroundTint="#2A2F95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/bntRight"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="240dp"
        android:background="@drawable/button"
        android:rotation="90"
        app:backgroundTint="#2A2F95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnUp"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        app:backgroundTint="#2A2F95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginEnd="240dp"
        android:background="@drawable/button"
        android:rotation="270"
        app:backgroundTint="#2A2F95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="btnLeft,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>